# Sortik

./: .gitignore  CMakeLists.txt  Makefile  Makefile2  main copy.c  main.cpp  main_old.c
fonts/: ProggyVector.h
imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
imgui/implot/: implot.h  implot_internal.h
